--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@
   --color7: hsla(0, 0%, 13%, 0.212);
   --color8: rgb(170, 159, 63);
 }
+@media only screen and (min-width: 375px){
   header{
       width: 100%;
       height: 100px;
@@ -79,3 +80,71 @@
       border-bottom: 3px solid var(--color1);
       padding: 7px 1px 7px 1px;
   }
+}
+@media only screen and (max-width: 375px){
+    header{
+        width: 100%;
+        height: 200px;
+        background-color: var(--color3);
+        position: fixed;
+        z-index: 1000;
+        top: 0;
+        box-shadow: 0px 4px 3px var(--color6);
+        
+    }
+    .ancho{
+        width: 1200px;
+        height: 200px;
+        margin: auto;
+        background-color: var(--color3);
+    
+    }
+    .cajaImg{
+        width: 500px;
+        height: 200px;
+        float: left;
+        background-color: var(--color3);
+        box-sizing: border-box;
+    
+    }
+    .cajaImg img{
+        width: 100px;
+        margin-top: 30px;
+        margin-left: 60px;
+  }
+  
+  .alias{
+      color:var(--color1);
+      font-size: 50px;
+      margin-top: 50px;
+      float:right;
+  }
+  nav{
+    width: 700px;
+    height: 100px;
+    padding-top: 50px;
+    background-color: var(--color3);
+    float: right;
+    text-align: right;
+    box-sizing: border-box;
+}
+nav a{
+    display: inline-block;
+    text-decoration: none;
+    list-style: none;
+    color:var(--color1);
+    margin-right: 32px;
+    font-size: 20px;
+    padding: 7px 1px 15px 1px;
+    border-bottom: 3px solid var(--color3);
+    transition: 0.3s;
+    
+   
+}
+nav a:hover{
+    transition: 0.3s;
+    color: var(--color1);
+    border-bottom: 3px solid var(--color1);
+    padding: 7px 1px 7px 1px;
+}
+}
