--- a/css/header.css
+++ b/css/header.css
@@ -14,14 +14,16 @@
   --color7: hsla(0, 0%, 13%, 0.212);
   --color8: rgb(170, 159, 63);
 }
+html{
+    font-size: 10px;
 
+}
 @media only screen and (min-width: 376px){
     
   body{
         width: 100%;
         background-color: var(--color1);
         box-sizing: content-box;
-        font-size: 10px;
   }     
   header{
       width: 100%;
@@ -80,7 +82,22 @@
       border-bottom: 0.3em solid var(--color3);
       transition: 0.3s;
       
-     
+  }
+  .github{
+    color:var(--color3);    
+    background-color: var(--color1);
+    border-bottom: 0.1em solid var(--color3);
+    border-radius: 0.8em;
+    padding: 0.5em 0.7em 0.5em 0.7em;
+    font-weight: 600;
+  }
+  .github:hover{
+    color:var(--color1);    
+    background-color: var(--color3);
+    border: 0.09em solid var(--color1);
+    border-radius: 0.7em;
+    padding: 0.5em 0.7em 0.5em 0.7em;
+    font-weight: 600;
   }
   nav a:hover{
       transition: 0.3s;
@@ -89,7 +106,7 @@
       padding: 0.5em 0.1em 0.5em 0.1em;
   }
 }
-@media only screen and (max-width: 375px){
+@media only screen and (max-width: 768px){
     body{
         width: 100%;
         background-color: var(--color1);
